v0.5/_sources/api/file_src_nest.hpp.rst.txt

.. _file_src_nest.hpp:

File nest.hpp
=============

|exhale_lsh| :ref:`Parent directory <dir_src>` (``src``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. contents:: Contents
   :local:
   :backlinks: none

Definition (``src/nest.hpp``)
-----------------------------


.. toctree::
   :maxdepth: 1

   program_listing_file_src_nest.hpp.rst





Includes
--------


- ``algorithm``

- ``approx.hpp`` (:ref:`file_src_approx.hpp`)

- ``array`` (:ref:`file_src_array.hpp`)

- ``array.hpp`` (:ref:`file_src_array.hpp`)

- ``array2.hpp`` (:ref:`file_src_array2.hpp`)

- ``array_latvec.hpp`` (:ref:`file_src_array_latvec.hpp`)

- ``debug.hpp`` (:ref:`file_src_debug.hpp`)

- ``interpolatordual.hpp`` (:ref:`file_src_interpolatordual.hpp`)

- ``nest.tpp`` (:ref:`file_src_nest.tpp`)

- ``omp.h``

- ``polyhedron.hpp`` (:ref:`file_src_polyhedron.hpp`)

- ``set``

- ``triangulation_simple.hpp`` (:ref:`file_src_triangulation_simple.hpp`)

- ``tuple``

- ``utilities.hpp`` (:ref:`file_src_utilities.hpp`)

- ``utility``

- ``vector``



Included By
-----------


- :ref:`file_src_bz_nest.hpp`




Namespaces
----------


- :ref:`namespace_brille`


Classes
-------


- :ref:`exhale_class_classbrille_1_1Nest`

- :ref:`exhale_class_classbrille_1_1NestLeaf`

- :ref:`exhale_class_classbrille_1_1NestNode`


Functions
---------


- :ref:`exhale_function_nest_8hpp_1a430ab5c8915a8abefc6bbd11c055d4cc`

